Center align satisfaction question header

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   <!-- Sección de Preguntas (Oculta al principio) -->
   <div id="seccionPreguntas" class="mt-4">
     <div class="card shadow px-4">
-        <h5 class="fw-bold mt-3">¿Qué tán satisfecho está?</h5> 
+        <h5 class="fw-bold mt-3 text-center">¿Qué tán satisfecho está?</h5> 
         <p class="text-secondary"><strong>Escala de calificación</strong><br>
             Para calificar utilice la escala del 1 al 5, donde: <br>
             Menor calificación: ⭐<br>
