--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Encuesta UNEMI</title>
+  <title>Encuesta de satisfacción docentes</title>
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,89 +15,100 @@
 
   <!-- Estilos Personalizados -->
   <style>
-      body {
-          font-family: 'Roboto','Open Sans', Arial, sans-serif;
-          background-color: #ffffff;
-          color: #002E45;
-      }
-      .franja-superior {
-          background-color: #002E45;
-          color: white;
-          height: 60px;
-      }
-      .logo-tigre, .logo-unemi {
-          height: 50px;
-          object-fit: contain;
-      }
-      .franja-naranja {
-          height: 10px;
-          background-color: #FF6900;
-      }
-      .container-capacit {
-        max-width: 980px; margin: auto;
-      }
-      /* Ocultar sección de preguntas inicialmente */
-      #seccionPreguntas {
+    body {
+        font-family: 'Roboto','Open Sans', Arial, sans-serif;
+        background-color: #ffffff;
+        color: #002E45;
+    }
+    .franja-superior {
+        background-color: #002E45;
+        color: white;
+        height: 60px;
+    }
+    .logo-tigre, .logo-unemi {
+        height: 50px;
+        object-fit: contain;
+    }
+    .franja-naranja {
+        height: 10px;
+        background-color: #FF6900;
+    }
+    .container-capacit {
+    max-width: 980px; margin: auto;
+    }
+    /* Ocultar sección de preguntas inicialmente */
+    #seccionPreguntas {
+    display: none;
+    max-width: 800px;
+    margin: auto;
+    }
+    .rating {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        gap: 25px;
+        margin-top: 10px;
+    }
+
+    .rating input {
         display: none;
-        max-width: 800px;
-        margin: auto;
-      }
-        .rating {
-            display: flex;
-            flex-direction: row-reverse;
-            justify-content: center;
-            gap: 25px;
-            margin-top: 10px;
-        }
+    }
 
-        .rating input {
-            display: none;
-        }
+    .rating label {
+        font-size: 32px;
+        color: #ccc;
+        cursor: pointer;
+        transition: color 0.2s;
+    }
 
-        .rating label {
-            font-size: 32px;
-            color: #ccc;
-            cursor: pointer;
-            transition: color 0.2s;
-        }
+    /* HOVER */
+    .rating label:hover,
+    .rating label:hover ~ label {
+        color: #FFCC00;
+    }
 
-        /* HOVER */
-        .rating label:hover,
-        .rating label:hover ~ label {
-            color: #FFCC00;
-        }
+    /* SELECCIÓN */
+    .rating input:checked ~ label {
+        color: #FFCC00;
+    }
 
-        /* SELECCIÓN */
-        .rating input:checked ~ label {
-            color: #FFCC00;
-        }
+    /* CARD DESLIZA HACIA LA IZQUIERDA (ocultando) */
+    .slide-out-left {
+        animation: slideOutLeft 0.4s forwards;
+    }
 
-        /* CARD DESLIZA HACIA LA IZQUIERDA (ocultando) */
-        .slide-out-left {
-            animation: slideOutLeft 0.4s forwards;
-        }
+    @keyframes slideOutLeft {
+        from { transform: translateX(0); opacity: 1; }
+        to { transform: translateX(-100%); opacity: 0; }
+    }
 
-        @keyframes slideOutLeft {
-            from { transform: translateX(0); opacity: 1; }
-            to { transform: translateX(-100%); opacity: 0; }
-        }
+    /* CARD DESLIZA DESDE LA DERECHA (mostrando) */
+    .slide-in-right {
+        animation: slideInRight 0.3s forwards;
+    }
 
-        /* CARD DESLIZA DESDE LA DERECHA (mostrando) */
-        .slide-in-right {
-            animation: slideInRight 0.3s forwards;
-        }
+    @keyframes slideInRight {
+        from { transform: translateX(100%); opacity: 0; }
+        to { transform: translateX(0); opacity: 1; }
+    }
 
-        @keyframes slideInRight {
-            from { transform: translateX(100%); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
+    .error-pregunta {
+        border: 2px solid #dc3545 !important; 
+        border-radius: 8px;
+        padding: 8px;
+        background-color: #ffe6e6;
+    }
 
-        .error-pregunta {
-            border: 2px solid #dc3545 !important; 
-            border-radius: 8px;
-            padding: 8px;
-            background-color: #ffe6e6;
-        }
+    /* Móvil */
+    @media (max-width: 576px) {
+    .rating label {
+        padding-right: 0.5rem !important;
+    }
+     .num_pregunta {
+        padding-right: 3rem !important;
+    }
+
+    }
 
   </style>
 </head>
@@ -122,12 +133,11 @@
   
   <!-- Tarjeta de Título -->
   <div id="cardInicial" class="card shadow pt-2 mb-3">
-    <h4 class="mt-1 px-2 fw-bold text-center">Encuesta Satisfacción Profesores</h4>
+    <h4 class="mt-1 px-2 fw-bold text-center">Encuesta Satisfacción Docentes</h4>
     <div class="row ">
         <div class="col-12">
             <p class="text-secondary px-4" style="font-size: 14px; text-align:justify;">
-                Nuestro objetivo es conocer su percepción sobre los servicios institucionales que reciben, con el fin de identificar áreas de mejora, fortalecer los procesos de apoyo académico y administrativo, y comprender cómo estos servicios influyen en el desarrollo de su labor dentro de la universidad.
-            </p>
+                La Dirección de Aseguramiento de la Calidad realiza la presente encuesta con el propósito de conocer su percepción sobre los servicios institucionales que recibe. La información recopilada permitirá identificar oportunidades de mejora, fortalecer los procesos de apoyo académico y administrativo, y comprender cómo estos servicios contribuyen al desarrollo de su labor dentro de la universidad.            </p>
         </div>
     </div>
   </div>
@@ -172,9 +182,9 @@
                 </select>
             </div>
             <div class="col-md-6 mb-3">
-                <label for="selectGenero" class="form-label fw-bold">Genero:</label>
+                <label for="selectGenero" class="form-label fw-bold">Género:</label>
                 <select id="selectGenero" class="form-select select2" style="width: 100%;">
-                    <option value="">Seleccione un genero</option>
+                    <option value="">Seleccione un género</option>
                     <option >Masculino</option>
                     <option >Femenino</option>
                 </select>
@@ -195,8 +205,7 @@
   <!-- Sección de Preguntas (Oculta al principio) -->
   <div id="seccionPreguntas" class="mt-4">
     <div class="card shadow px-4">
-        <h5 class="fw-bold mt-3 text-center">¿Qué tán satisfecho está?</h5> 
-        <p class="text-secondary"><strong>Escala de calificación</strong><br>
+        <h5 class="fw-bold mt-3 text-center">Escala de calificación</h5> 
             Para calificar utilice la escala del 1 al 5, donde: <br>
             Menor calificación: ⭐<br>
             Mayor calificación: ⭐⭐⭐⭐⭐
@@ -204,13 +213,14 @@
     </div>
 
     <div class="card shadow mt-4 py-3 px-4">
+        <h5 class="fw-bold mt-3 mb-2 text-center">Qué tan satisfecho está con:</h5> 
         <div class="mb-4">
-            <p>1. Apoyo que recibe para realizar sus actividades académicas.*</p>
+            <p>1. El apoyo que recibe para realizar sus actividades académicas.</p>
             <div class="text-center mb-2">
-                <span style="padding-right: 5.5rem;">1</span>
-                <span style="padding-right: 5.5rem;">2</span>
-                <span style="padding-right: 5.5rem;">3</span>
-                <span style="padding-right: 5.5rem;">4</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">1</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">2</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">3</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">4</span>
                 <span>5</span>
             </div>
             <div class="rating">
@@ -228,12 +238,12 @@
         </div>
 
             <div class="mb-4">
-                <p>2. Cantidad de estudiantes asignados en los cursos que imparte*</p>
+                <p>2. La cantidad de estudiantes asignados en los cursos que imparte.</p>
                 <div class="text-center mb-2">
-                    <span style="padding-right: 5.5rem;">1</span>
-                    <span style="padding-right: 5.5rem;">2</span>
-                    <span style="padding-right: 5.5rem;">3</span>
-                    <span style="padding-right: 5.5rem;">4</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">1</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">2</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">3</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">4</span>
                     <span>5</span>
                 </div>
                 <div class="rating">
@@ -250,12 +260,12 @@
                 </div>
           </div>
           <div class="mb-4">
-                <p>3. Soporte técnico y conectividad institucional.*</p>
+                <p>3. El soporte técnico y conectividad institucional.</p>
                 <div class="text-center mb-2">
-                    <span style="padding-right: 5.5rem;">1</span>
-                    <span style="padding-right: 5.5rem;">2</span>
-                    <span style="padding-right: 5.5rem;">3</span>
-                    <span style="padding-right: 5.5rem;">4</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">1</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">2</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">3</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">4</span>
                     <span>5</span>
                 </div>
                 <div class="rating">
@@ -272,12 +282,12 @@
                 </div>
           </div>
         <div class="mb-4">
-            <p>4. Incentivos para participar en eventos académicos o de investigación.*</p>
+            <p>4. Los incentivos para participar en eventos académicos o de investigación.</p>
             <div class="text-center mb-2">
-                    <span style="padding-right: 5.5rem;">1</span>
-                    <span style="padding-right: 5.5rem;">2</span>
-                    <span style="padding-right: 5.5rem;">3</span>
-                    <span style="padding-right: 5.5rem;">4</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">1</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">2</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">3</span>
+                    <span class="num_pregunta" style="padding-right: 5.5rem;">4</span>
                     <span>5</span>
                 </div>
                 <div class="rating">
@@ -294,12 +304,12 @@
                 </div>
         </div>
         <div class="mb-4">
-            <p>5. Retroalimentación recibida tras los procesos de evaluación.*</p>
+            <p>5. La retroalimentación recibida tras los procesos de evaluación.</p>
             <div class="text-center mb-2">
-                <span style="padding-right: 5.5rem;">1</span>
-                <span style="padding-right: 5.5rem;">2</span>
-                <span style="padding-right: 5.5rem;">3</span>
-                <span style="padding-right: 5.5rem;">4</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">1</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">2</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">3</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">4</span>
                 <span>5</span>
             </div>
             <div class="rating">
@@ -316,12 +326,12 @@
             </div>
         </div>
         <div class="mb-4">
-            <p>6. Apoyo institucional para el desarrollo de proyectos de investigación.*</p>
+            <p>6. El apoyo institucional para el desarrollo de proyectos de investigación.</p>
             <div class="text-center mb-2">
-                <span style="padding-right: 5.5rem;">1</span>
-                <span style="padding-right: 5.5rem;">2</span>
-                <span style="padding-right: 5.5rem;">3</span>
-                <span style="padding-right: 5.5rem;">4</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">1</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">2</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">3</span>
+                <span class="num_pregunta" style="padding-right: 5.5rem;">4</span>
                 <span>5</span>
             </div>
             <div class="rating">
